Adjust min-height of asciinema player to avoid filling extra space on mobile

--- a/themes/tjet-website-theme/static/css/style.css
+++ b/themes/tjet-website-theme/static/css/style.css
@@ -632,12 +632,13 @@ section {
     padding-bottom: 0px;
     color: white;
     image-rendering: crisp-edges;
-    min-height: 500px;
+    min-height: 400px;
 }
 
 @media screen and (min-width: 1100px) {
     #cliDemoContainer {
         transform: perspective(10cm) rotate3d(0,1,0, -3deg);
+        min-height: 570px;
     }
 }
 
